make website responsive, add style and fix inital pag in manifest, fix icon on iphone etc

--- a/instablam/styles/style.css
+++ b/instablam/styles/style.css
@@ -6,6 +6,8 @@ h1 {
 /* _______________________*/
 
 .mainContainer {
+  background-color: white
+  overflow: scroll;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -14,27 +16,234 @@ h1 {
 
 /*________________________*/
 
-#imageContainer {
+#pictureStream {
   display: flex;
-  width: 10em;
-  height: 10em;
+  width: 15em;
+  height: 15em;
   border-radius: 3em;
   border-style: ridge;
   border-color: grey;
-  margin-top: 2em;
+  object-fit: cover;
+}
+
+#currentImage,
+canvas,
+canvas[style] {
+  display: none;
+  width: 15em;
+  height: 15em;
+  border-radius: 3em;
+  border-style: ridge;
+  border-color: grey;
+  object-fit: cover;
 }
 
 #cameraButtonWrapper {
   position: relative;
   display: flex;
   flex-direction: column;
-  z-index: 0;
   justify-content: center;
   align-items: center;
 }
 
 #cameraIcon {
-  margin-top: 3em;
+  margin-top: 1em;
   height: 3em;
   width: 5em;
 }
+
+.slideContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 2em;
+}
+
+input {
+  display: flex;
+  margin-bottom: 1em;
+  width: 15em;
+  height: 1em;
+
+}
+
+input[type=range] {
+  height: 38px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 12px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000;
+  background: rgb(231, 255, 78);
+  border-radius: 5px;
+  border: 1px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 30px;
+  width: 15px;
+  border-radius: 5px;
+  background: #FFFFFF;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -10px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #2F50A9;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 12px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000;
+  background: #2F50A9;
+  border-radius: 5px;
+  border: 1px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 30px;
+  width: 15px;
+  border-radius: 5px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 12px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #2F50A9;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #000000;
+}
+input[type=range]::-ms-fill-upper {
+  background: #2F50A9;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #000000;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 30px;
+  width: 15px;
+  border-radius: 5px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #2F50A9;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #2F50A9;
+}
+
+label {
+  font-size: 2em;
+}
+
+@media only screen and (min-width: 600px) {
+  h1 {
+    font-size: 4em;
+  }
+  #currentImage,
+  canvas,
+  canvas[style] {
+    width: 20em;
+    height: 20em;
+  }
+
+  #pictureStream {
+    width: 20em;
+    height: 20em;
+  }
+
+  input {
+    width: 20em;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  h1 {
+    font-size: 4em;
+  }
+  #currentImage,
+  canvas,
+  canvas[style] {
+    width: 30em;
+    height: 30em;
+  }
+
+  #pictureStream {
+    width: 30em;
+    height: 30em;
+  }
+
+  input {
+    width: 30em;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  h1 {
+    font-size: 4em;
+  }
+  #currentImage,
+  canvas,
+  canvas[style] {
+    width: 40em;
+    height: 40em;
+  }
+
+  #pictureStream {
+    width: 40em;
+    height: 40em;
+  }
+
+  input {
+    width: 40em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  h1 {
+    font-size: 4em;
+  }
+  #currentImage,
+  canvas,
+  canvas[style] {
+    width: 60em;
+    height: 60em;
+  }
+
+  #pictureStream {
+    width: 60em;
+    height: 60em;
+  }
+
+  input {
+    width: 60em;
+  }
+}
+
